# owldishes-backend

./: .gitignore  README.md  pyproject.toml
assets/css/: admin.css
src/next_slideshows_backend/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/next_slideshows_backend/api/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py  widgets.py
src/next_slideshows_backend/api/migrations/: 0001_initial.py
src/next_slideshows_backend/api/templates/: slide_media_item_file_input.html
